test/resources/typer/failing/HOFFuncParamMismatch.amy
object HOFFuncParamMismatch
  def applyFunc(f: (Int(32)) => Int(32), v: Int(32)): Int(32) := f(v)
  
  // Error: Swapped positions. Passing Int where Function is expected.
  val res: Int(32) = applyFunc(10, (x: Int(32)) => x + 1)
end HOFFuncParamMismatch